[gd_scene load_steps=2 format=3 uid="uid://achievement_popup_001"]

[ext_resource type="Script" path="res://scripts/achievement_popup.gd" id="1"]

[node name="AchievementPopup" type="Control"]
custom_minimum_size = Vector2(350, 80)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -370.0
offset_top = 100.0
offset_right = -20.0
offset_bottom = 180.0
grow_horizontal = 0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBox" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="IconLabel" type="Label" parent="Panel/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "üèÜ"
vertical_alignment = 1

[node name="VBox" type="VBoxContainer" parent="Panel/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="Panel/HBox/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Achievement Name"

[node name="RewardLabel" type="Label" parent="Panel/HBox/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "+100 coins"
